Exposes the children of math regions.

ARIA Implementation Guide 1.0 says that math should be mapped to ROLE_SYSTEM_EQUATION but we omitted to expose its children.
Mac works fine ones AX_ROLE_MATH is removed from the list of leaf objects.
Also checked with Safari and it does expose the children of role="math".
BUG=645168
R=dmazzoni@chromium.org
TESTED=manually

Review-Url: https://codereview.chromium.org/2715403002
Cr-Commit-Position: refs/heads/master@{#455673}

Former-commit-id: 54def8d1e3708b63e98e7db3a8e91554273b5561